# cadexchangertask

./: CMakeLists.txt  README.md  main.cpp
include/: base_curves.h  circle.h  ellipse.h  helix.h  point.h
source/: circle.cpp  ellipse.cpp  helix.cpp  point.cpp
tests/: circle_test.cpp  ellipse_test.cpp  helix_test.cpp
